# petflow-app

./: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: prepare-desktop.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: client.ts
src/components/: AuthProvider.tsx  ConfirmModal.tsx  InventoryEditor.tsx  InventoryStatusBadge.tsx  Layout.tsx  ManualAdjustmentForm.tsx  MovementInventoryModal.tsx  ProductCard.tsx  RequireAuth.tsx  SearchSelect.tsx  SelectListModal.tsx  StatCard.tsx  StockBadge.tsx  StockChart.tsx  StockValuationChart.tsx  TimeSeriesLineChart.tsx  ToastProvider.tsx  UploadDropzone.tsx
src/components/ui/: EmptyState.tsx  Modal.tsx  PageHeader.tsx
src/hooks/: useAnchorRect.ts  useFamilies.ts  useInventories.ts  useMovements.ts  usePackagings.ts  useProductThresholds.ts  useProducts.ts  useSettings.ts  useStock.ts  useStockLocations.ts  useStockValuations.ts
src/lib/: constraints.test.ts  constraints.ts  queryClient.ts  runtime.ts  stockReasons.test.ts  stockReasons.ts
src/routes/: Adjustments.tsx  Dashboard.tsx  HusseSync.tsx  Locations.tsx  Login.tsx  Movements.tsx  ProductDetail.tsx  Products.tsx  Sandbox.tsx  Settings.tsx
src/types/: index.ts
