[package]
name = "petflow-desktop"
version = "0.1.0"
description = "PetFlow Desktop"
authors = ["PetFlow"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
getrandom = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
